--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: Gungnir
-SEOTitle: Jekyll theme Gungnir
-description: Jekyll version of the blog theme Gungnir.
+title: Prateek Raikar
+SEOTitle: Explore the space
+description: Tinker the things
 keyword: "jekyll, theme, blog, blog theme"
-url: "https://jekyll-theme-gungnir.vercel.app"      # your host, for absolute URL
+url: "https://seeker316.github.io"      # your host, for absolute URL
 baseurl: ""                                         # for example, '/blog' if your blog hosted on 'host/blog'
 avatar: "img/header-avatar.jpeg"                    # the avatar showing on the homepage
 
@@ -60,7 +60,7 @@ sns:
   twitter_username: renovamen_zxh
   facebook_username: renovamen.zou
   linkedin_username: xiaohan-zou-55bba0160
-  email_address: renovamenzxh@gmail.com
+  email_address: prateek811raikar@gmail.com
 
 
 # Build settings
