--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ sns:
   github_username: seeker316
  # weibo_username:
  # zhihu_username: chao-neng-gui-su
-  twitter_username: 
+  twitter_username: Seeker42376576
  # facebook_username: renovamen.zou
  # linkedin_username: xiaohan-zou-55bba0160
   email_address: prateek811raikar@gmail.com
