--- a/_config.yml
+++ b/_config.yml
@@ -109,9 +109,9 @@ menus:
       - title: Me
         font: fas fa-user-astronaut
         url: /about/
-      - title: Theme
-        font: fas fa-meteor
-        url: /theme/
+#       - title: Theme
+#         font: fas fa-meteor
+#         url: /theme/
   - title: Archive
     font: fas fa-archive
     url: /archive/
