--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: Tinker the things
 keyword: "Space , tinker, future"
 url: "https://seeker316.github.io"      # your host, for absolute URL
 baseurl: ""                                         # for example, '/blog' if your blog hosted on 'host/blog'
-avatar: "img/header-avatar.jpeg"                    # the avatar showing on the homepage
+avatar: "img/prateek_avtar1.jpeg"                    # the avatar showing on the homepage
 
 
 # GitHub repository (if the site is hosted by GitHub)
