--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ avatar: "img/prateek_avtar2.gif"                    # the avatar showing on the 
 
 
 # GitHub repository (if the site is hosted by GitHub)
-repository: Renovamen/jekyll-theme-gungnir
+repository: seeker316/seeker316.github.io
 repository_branch: main
 
 
