--- a/_config.yml
+++ b/_config.yml
@@ -109,6 +109,9 @@ menus:
       - title: Me
         font: fas fa-user-astronaut
         url: /about/
+      - title: Music
+        font: fas fa-music
+        url: /music/
 #       - title: Theme
 #         font: fas fa-meteor
 #         url: /theme/
